templates/xtc5/stylesheet.css
/* ... */
.productPreviewContent .productOldPrice {
	font-size:12px;
	font-weight:bold;
	color:#ff0000;
}
.productPreviewContent .taxandshippinginfo a {
	font-size:11px;
	font-weight:normal;
	color:#999999;
}
/* PRODUCT INFO / PRODUCT DETAILS */
#productinfowrap {
	display:table;
	width:100%
}
#productinfoimages {
	float:left;
	background-color:#EDEDED;
	text-align:center;
	width:140px;
	padding:10px;
	margin:0px 10px 10px 0px;
	border: solid 1px #999999;
}
#productinfoimages .productimage {
	border: solid 1px #999999;
}
#productinfoimages .hrlightgrey {
	margin-top:6px;
	margin-bottom:6px;
}
#productinfopricewithimages {
	float:right;
}
#productinfopricewithimages img {
	cursor:pointer
}
#productinfopricewithoutimages {
	width:100%
}
#productinfopricewithoutimages img {
	cursor:pointer
}
#productinfoprice {
	padding:5px
}
#productinfoprice .hrlightgrey {
	margin-top:6px;
	margin-bottom:6px;
}
#productinfoprice .productprice {
	margin:0;
	padding:0;
	font-size:14px;
	font-weight:bold;
}
#productinfoprice .productOldPrice {
	color:#FF0000;
	margin:0;
	padding:0;
	font-size:12px;
	font-weight:bold;
}
#productinfoprice .taxandshippinginfo {
	margin:0;
	padding:0;
	font-size:11px;
	font-weight:normal;
	color:#999999;
}
#productinfoprice .taxandshippinginfo a {
	margin:0;
	padding:0;
	font-size:11px;
	font-weight:normal;
	color:#999999;
}
#productinfoprice .shippingtime {
	margin:0;
	padding:0;
	font-size:11px;
	font-weight:normal;
	color:#999999;
}
#productinfoprice .stockimage {
	margin:0;
	padding:0;
}
#productinfoprice .stockimagetext {
	margin:0;
	padding:0;
	font-size:11px;
	font-weight:normal;
	color:#999999;
}
p.productinfoproductadded {
	font-size:11px;
}
.productoptions {
	background-color:#f8f8f8;
	padding:6px;
	border-style:solid;
	border-width:1px 0px 0px 0px;
	border-color:#ccc
}
.addtobasket {
	background-color:#EDEDED;
	padding:6px;
	text-align:right;
	border-style:solid;
	border-width:1px 0px 0px 0px;
	border-color:#999999
}
/* POPUPS PRODUCTINFO */
body.popupproductinfo {
	padding:15px;
	background:none;
	background-color:#fff
}
/* POPUP print_order.html */
body.popupprintorder {
	font-family:Arial, Sans-serif;
	font-size:13px;
	padding:15px;
	background:none;
	background-color:#fff
}
body.popupprintorder .products tr.header td {
	font-weight:bold;
	background-color:#EDEDED;
}
body.popupprintorder .products .total {
	text-align:right
}
body.popupprintorder .products .quantity {
	vertical-align:top
}
body.popupprintorder .productname {
	vertical-align:top
}
body.popupprintorder .model {
	vertical-align:top
}
body.popupprintorder .singleprice {
	vertical-align:top
}
body.popupprintorder .totalprice {
	vertical-align:top
}
/* HIGHLIGHTBOX (BACKGROUND) */
div.highlightbox {
	padding: 15px;
	background-color:#f8f8f8;
	border: solid #d9d9d9 1px
}
div.highlightbox ul {
	margin-left:15px;
	padding:0;
	display:block;
	list-style-type:square;
	line-height:20px
}
div.highlightbox h1 {
	color: #893769;
	padding:0px 0px 10px 0px;
	margin:0;
	border:none;
	font-size:16px
}
div.highlightbox div.hr {
	height:1px;
	line-height:1px;
	margin:0;
	padding:0;
	display:block;
	border-bottom: solid 1px #eee;
}
/* PAYMENT TYPE SELECTION */
table.paymentblock {
	background-color:#f8f8f8;
	border-style: solid;
	border-width:0px 1px 1px 1px;
	border-color:#eee;
	margin-bottom:15px;
}
table.paymentblock tr td.header {
	background-color:#ccc;
	padding:2px;
	padding-left:5px;
	color:#FFFFFF;
	font-weight:bold;
}
/* SHIPPING TYPE SELECTION */
table.shippingblock {
	background-color:#f8f8f8;
	border-style: solid;
	border-width:0px 1px 1px 1px;
	border-color:#eee;
	margin-bottom:15px;
}
table.shippingblock tr td.header {
	background-color:#ccc;
	padding:2px;
	padding-left:5px;
	color:#FFFFFF;
	font-weight:bold;
}
table.shippingblock tr td {
	vertical-align:top;
}
table.shippingblock tr td.description {
	width:100%;
	vertical-align:top;
	padding-left:6px;
}
table.shippingblock tr td.radiobutton {
	vertical-align:top;
	white-space:nowrap;
	padding:4px;
}
table.shippingblock tr td.radiobutton input {
	margin:0;
	padding:0;
}
table.shippingblock tr td.price {
	vertical-align:top;
	white-space:nowrap
}
/* ORDER DETAILS IN ACCOUNT HISTORY */
table.accounthistoryinfoorderdetails tr td {
	vertical-align:top
}
table.accounthistoryinfoorderdetails tr.header td {
	font-weight:bold
}
/* MESSAGEBOX ON CONTACT SITE */
textarea.message_body {
	width:130px;
}
/* DOWNLOAD BOX FOR USER DOWNLOADS */
table.downloadbox {
	padding: 5px;
	background-color:#f8f8f8;
	border: solid #d9d9d9 1px;
	margin-bottom:8px;
}
table.downloadbox tr td.icon {
	padding-right: 15px;
}
table.downloadbox tr td.downloadlink {
	width:100%;
}
/* TABLE WICH SHOWS GRADUATED PRICES */
table.graduatedprice {
	font-size:11px;
	text-align:left;
	margin-top:5px;
}
table.graduatedprice tr td.header {
	font-size:12px;
	font-weight:bold;
	text-align:left
}
/* ORDER DETAILS */
table.orderdetails {
	font-size:11px;
	background-color:#f8f8f8;
	border-style: solid;
	border-width:0px 1px 1px 1px;
	border-color:#ccc;
}
table.orderdetails tr td {
	padding:4px
}
table.orderdetails tr.headerrow td {
	background-color:#ccc;
	color:#555;
	font-weight:bold
}
table.orderdetails tr.headerrow td.left {
	text-align:left
}
table.orderdetails tr.headerrow td.center {
	text-align:center
}
table.orderdetails tr.headerrow td.right {
	text-align:right
}
/* ORDER DETAILS CONTENT ROW 1 */
table.orderdetails tr.contentrow1 td {
	background-color:#f8f8f8;
	vertical-align:top
}
table.orderdetails tr.contentrow1 td.quantity {
	text-align:center
}
table.orderdetails tr.contentrow1 td.quantity input {
	font-size:11px;
	padding:2px;
	border:solid #ccc 1px;
}
table.orderdetails tr.contentrow1 td.productname {
	text-align:left
}
/* ORDER DETAILS CONTENT ROW 2 */
table.orderdetails tr.contentrow2 td {
	background-color:#f8f8f8;
	vertical-align:top
}
table.orderdetails tr.contentrow2 td.quantity {
	text-align:center
}
/* ... */

